# bitstream_mode3_p1204_3

./: .dockerignore  .gitchangelog.rc  .gitignore  CHANGELOG.md  Dockerfile  LICENSE.md  README.md  TODOS.md  check.sh  development.md  docker_build_run.sh  prettify.sh  pyproject.toml  release.py  requirements.txt
p1204_3/: __init__.py  __main__.py  features.py  generic.py  model.py  modelutils.py  sklearn_tree_deserializing.py  utils.py  videoparser.py
p1204_3/models/p1204_3/: config.json  mode3_mobile_20trees_depth_8.npy  mode3_mobile_20trees_depth_8_fs.json  mode3_mobile_20trees_depth_8_reg.json  mode3_pc_20trees_depth_8.npy  mode3_pc_20trees_depth_8_fs.json  mode3_pc_20trees_depth_8_reg.json
p1204_3/models/p1204_3_dev/: config.json  mode3_mobile_20trees_depth_8_fs.json  mode3_mobile_20trees_depth_8_reg.json
test_videos/: LICENCE.md  test_video_vp9.mkv
test_videos/parsed/: test_video_h264_feat.pkl  test_video_h265_feat.pkl  test_video_vp9_feat.pkl
test_videos/reports/: test_video_h264.json  test_video_h265.json  test_video_vp9.json
tests/: test_p1204_3.py  test_p1204_4.py
