[build-system]
requires = [ "poetry>=1.0.3",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "p1204_3"
version = "0.1.2"
description = "ITU-T P.1204.3 reference implementation"
readme = "README.md"
authors = [ "Steve Göring <steve.goering@tu-ilmenau.de>", "Ramachandra Rao Rakesh Rao <Rakesh-Rao.Ramachandra-Rao@tu-ilmenau.de>",]
license = "LICENCE.md"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.18.2"
scikit-learn = "^0.22.2"
scipy = "^1.4.1"
pandas = "^0.25.3"
sklearn-json = "^0.1.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"
gitchangelog = "^3.0.4"
pystache = "^0.5.4"

[tool.poetry.scripts]
p1204_3 = "p1204_3:main"
