[build-system]
requires = [ "poetry>=1.0.3",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "p1204_3"
version = "0.1.3"
description = "ITU-T P.1204.3 reference implementation"
readme = "README.md"
authors = [ "Steve Göring <steve.goering@tu-ilmenau.de>", "Ramachandra Rao Rakesh Rao <Rakesh-Rao.Ramachandra-Rao@tu-ilmenau.de>",]
license = "LICENCE.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.11"
numpy = "^1.22.3"
scikit-learn = "^1.0.2"
scipy = "^1.10.0"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
gitchangelog = "^3.0.4"

[tool.poetry.scripts]
p1204_3 = "p1204_3:main"
