[build-system]
requires = [ "poetry>=2",]
build-backend = "poetry.masonry.api"

[tool.poetry]
name = "p1204_3"
version = "0.1.3"
description = "ITU-T P.1204.3 reference implementation"
readme = "README.md"
authors = [ "Steve Göring <steve.goering@tu-ilmenau.de>", "Ramachandra Rao Rakesh Rao <Rakesh-Rao.Ramachandra-Rao@tu-ilmenau.de>",]
license = "LICENCE.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.14"
numpy = "^1.24.4"
scikit-learn = "1.5.0"
scipy = "^1.10.1"
pandas = "^2.0.3"

[tool.poetry.scripts]
p1204_3 = "p1204_3:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
gitchangelog = "^3.0.4"

